--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "sanity-gatsby-portfolio",
+  "name": "acipmar",
   "version": "0.0.0",
   "scripts": {
     "build": "lerna run build --parallel",
