--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "graphql-deploy": "lerna run graphql-deploy",
     "lint": "lerna run lint",
     "postinstall": "lerna bootstrap",
+    "git": "git add . && git commit -m ",
+    "postgit": "git push --all",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
