--- a/web/package.json
+++ b/web/package.json
@@ -1,8 +1,8 @@
 {
   "private": true,
-  "name": "sanity-gatsby-portfolio-web",
+  "name": "acipmar",
   "version": "1.0.2",
-  "author": "Sanity <hello@sanity.io>",
+  "author": "Alberto Delgado",
   "scripts": {
     "build": "gatsby build",
     "clean-cache": "gatsby clean",
@@ -20,9 +20,12 @@
     "gatsby-plugin-postcss": "^2.0.7",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-source-sanity": "^4.0.1",
+    "pure-react-carousel": "^1.27.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "react-icons": "^4.2.0",
+    "react-select": "^4.2.1"
   },
   "devDependencies": {
     "dotenv": "^8.0.0",
