--- a/web/package.json
+++ b/web/package.json
@@ -23,6 +23,7 @@
     "pure-react-carousel": "^1.27.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-fuzzy-picker": "^1.2.1",
     "react-helmet": "^5.2.0",
     "react-icons": "^4.2.0",
     "react-select": "^4.2.1"
