--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
     "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
   },
   "dependencies": {
+    "@react-pdf/renderer": "^1.6.13",
     "@sanity/block-content-to-react": "^2.0.7",
     "@sanity/image-url": "^0.140.18",
     "date-fns": "^1.30.1",
